--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ table#board td
     border: 4px solid var(--border-color);
     width: 30%;
     height: 30%;
-    vertical-align: middle;
 }
 
 table#board tr:first-child td { border-top: 0; }
@@ -66,30 +65,31 @@ table#board tr td:first-child { border-left: 0; }
 table#board tr:last-child td { border-bottom: 0; }
 table#board tr td:last-child { border-right: 0; }
 
-table#board p.x
+table#board td
 {
-    color: var(--x-color);
+    text-align: center;
 }
 
-table#board p.o
+table#board svg
 {
-    color: var(--o-color);
+    height: 80%;
+}
+
+table#board path
+{
+    stroke: var(--x-color);
+    stroke-width: 2;
+}
+
+table#board circle
+{
+    stroke: var(--o-color);
+    stroke-width: 2;
+    fill: none;
 }
 
 .noselect
 {
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-table#board p
-{
-    text-align: center;
-    font-size: 5em;
-
     -moz-user-select: none;
     -khtml-user-select: none;
     -webkit-user-select: none;
